# htmx-lsp

./: .gitignore  .vscodeignore  Cargo.toml  README.md  enable.lua  htmx.test.html  package-lock.json  package.json
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
client/vscode/: README.md  extension.js  jsconfig.json  package-lock.json  package.json
lsp/: Cargo.toml
lsp/src/: handle.rs  lib.rs  text_store.rs  tree_sitter.rs  tree_sitter_querier.rs
lsp/src/htmx/: mod.rs  tokenizer.rs
lsp/src/htmx/attributes/: hx-boost.md  hx-confirm.md  hx-delete.md  hx-disabled-elt.md  hx-ext.md  hx-get.md  hx-history-elt.md  hx-history.md  hx-include.md  hx-params.md  hx-patch.md  hx-post.md  hx-preserve.md  hx-push-url.md  hx-put.md  hx-replace-url.md  hx-select.md  hx-swap.md  hx-sync.md  hx-target.md  hx-trigger.md  hx-vals.md
lsp/src/htmx/attributes/class-tools/: classes.md  data-classes.md
lsp/src/htmx/attributes/client-side-templates/: handlebars-template.md  mustache-array-template.md  mustache-template.md  nunjucks-template.md  xslt-template.md
lsp/src/htmx/attributes/head-support/: hx-head.md
lsp/src/htmx/attributes/include-vals/: include-vals.md
lsp/src/htmx/attributes/loading-states/: data-loading-aria-busy.md  data-loading-class-remove.md  data-loading-class.md  data-loading-delay.md  data-loading-disable.md  data-loading-path.md  data-loading-states.md  data-loading-target.md  data-loading.md
lsp/src/htmx/attributes/path-deps/: path-deps.md
lsp/src/htmx/attributes/preload/: preload-images.md  preload.md
lsp/src/htmx/attributes/remove-me/: remove-me.md
lsp/src/htmx/attributes/response-targets/: hx-target-error.md
lsp/src/htmx/attributes/sse/: sse-connect.md  sse-swap.md
lsp/src/htmx/attributes/ws/: ws-connect.md  ws-send.md
lsp/src/htmx/hx-boost/: false.md  true.md
lsp/src/htmx/hx-disabled-elt/: closest.md  this.md
lsp/src/htmx/hx-ext/: ajax-header.md  alpine-morph.md  class-tools.md  client-side-templates.md  debug.md  disable-element.md  event-header.md  head-support.md  include-vals.md  json-enc.md  loading-states.md  method-override.md  morph.md  morphdom-swap.md  multi-swap.md  path-deps.md  preload.md  remove-me.md  response-targets.md  restored.md  sse.md  ws.md
lsp/src/htmx/hx-params/: none.md
lsp/src/htmx/hx-push-url/: true.md
lsp/src/htmx/hx-replace-url/: false.md  true.md
lsp/src/htmx/hx-swap/: afterbegin.md  afterend.md  beforebegin.md  beforeend.md  delete.md  innerHTML.md  none.md  outerHTML.md
lsp/src/htmx/hx-sync/: queue.md
lsp/src/htmx/hx-target/: closest.md  find.md  next.md  prev.md  this.md
lsp/src/htmx/hx-trigger/: changed.md  click.md  consume.md  delay.md  every.md  from.md  intersect.md  keyup.md  load.md  once.md  queue.md  revealed.md  target.md  throttle.md
src/: config.rs  htmx_tags.rs  htmx_tree_sitter.rs  init_hx.rs  lib.rs  main.rs  opts.rs  position.rs  queries.rs  query_helper.rs  server.rs  to_input_edit.rs
src/md/attributes/: hx-boost.md  hx-confirm.md  hx-delete.md  hx-disable.md  hx-encoding.md  hx-ext.md  hx-get.md  hx-headers.md  hx-history-elt.md  hx-history.md  hx-include.md  hx-indicator.md  hx-on.md  hx-params.md  hx-patch.md  hx-post.md  hx-prompt.md  hx-push-url.md  hx-put.md  hx-replace-url.md  hx-request.md  hx-select-oob.md  hx-select.md  hx-swap-oob.md  hx-swap.md  hx-sync.md  hx-target.md  hx-trigger.md  hx-validate.md  hx-vals.md
src/md/hx-boost/: false.md  true.md
src/md/hx-ext/: ajax-header.md  alpine-morph.md  class-tools.md  debug.md  head-support.md  loading-states.md  method-override.md  morphdom-swap.md  multi-swap.md  path-deps.md  remove-me.md  response-targets.md  restored.md
src/md/hx-history/: false.md
src/md/hx-params/: not.md  star.md
src/md/hx-push-url/: false.md
src/md/hx-swap/: afterend.md  beforebegin.md  delete.md  outerHTML.md
src/md/hx-swap-oob/: true.md
src/md/hx-sync/: abort.md  drop.md  replace.md
src/md/hx-target/: closest.md  prev.md
src/md/hx-trigger/: click.md  consume.md  every.md  from.md  intersect.md  keyup.md  load.md  throttle.md
util/: Cargo.toml
util/src/: lib.rs
