[package]
name = "jsperf-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp = { path = "lsp" }
anyhow.workspace = true
clap.workspace = true
log.workspace = true
structured-logger.workspace = true
walkdir = "2.3.3"
util = { path = "./util" }

[workspace.dependencies]
swc_core = { version = "0.79.28", features = [
    "ecma_ast",
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "common",
    "__parser",
] }
swc_common = { version = "0.31.18", features = ["tty-emitter"] }
perf-checker = { path = "perf-checker" }
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive", "env"] }
log = { version = "0.4.19", features = ["kv_unstable", "kv_unstable_serde"] }
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
structured-logger = "1.0.1"

[workspace]
members = [
    "lsp",
    "util",
]
