[package]
name = "htmx-lsp"
version = "0.1.1"
edition = "2021"
description = "A language server for htmx"
license = "MIT"
homepage = "https://github.com/ThePrimeagen/htmx-lsp"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full", "sync"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
tree-sitter = "0.20.10"
tree-sitter-html = "0.19.0"
tree-sitter-rust = "0.20.4"
walkdir = "2.4.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
tree-sitter-javascript = "0.20.1"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3
