[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
util = { path = "../util" }
tree-sitter.workspace = true
tree-sitter-html.workspace = true
maplit = "1.0.2"
lazy_static = "1.4.0"
