[package]
name = "htmx-lsp-server"
version = "0.1.0"
edition = "2021"
description = "lsp server for htmx-lsp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
htmx-lsp-util = { version = "0.1", path = "../util" }
tree-sitter.workspace = true
tree-sitter-html.workspace = true
maplit = "1.0.2"
phf = { version = "0.11.2", features = ["macros"] }
lsp-textdocument = "0.3.2"
once_cell = "1.19.0"
